--- a/flaskProject/templates/user_added.html
+++ b/flaskProject/templates/user_added.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Usuario agregado! :)</title>
+    <title>Usuario agregado! :</title>
 </head>
 <body>
     <h1>Agregué a un usuario correctamente!</h1>
