--- a/flaskProject/templates/peliculas/agregar_pelicula.html
+++ b/flaskProject/templates/peliculas/agregar_pelicula.html
@@ -13,7 +13,7 @@
         <label for="genero">Género:</label>
         <input type="text" name="genero" id="genero" required>
         <label for="duracion">Duración:</label>
-        <input type="text" name="duracion" id="duracion" required>
+        <input type="number" name="duracion" id="duracion" required>
         <label for="inventario">Inventario:</label>
         <input type="number" name="inventario" id="inventario" required>
         <button type="submit">Agregar</button>
