--- a/my-app/src/components/Rentas/CRURentas.css
+++ b/my-app/src/components/Rentas/CRURentas.css
@@ -1,43 +1,43 @@
-.crud-peliculas-container {
+.crud-rentas-container {
   margin: 20px;
-  background-color: #4b0082;
+  background-color: #8b0000;
   padding: 20px;
   border-radius: 10px;
 }
 
-.crud-peliculas-header {
+.crud-rentas-header {
   margin-bottom: 10px;
   color: #ffffff;
 }
 
-.crud-peliculas-list {
+.crud-rentas-list {
   list-style-type: none;
   padding: 0;
 }
 
-.crud-peliculas-item {
+.crud-rentas-item {
   margin-bottom: 5px;
   color: #ffffff;
 }
 
-.crud-peliculas-input {
+.crud-rentas-input {
   margin-right: 10px;
   padding: 5px;
   border-radius: 5px;
 }
 
-.crud-peliculas-button {
+.crud-rentas-button {
   margin-right: 10px;
   padding: 8px 15px;
   background-color: #ffffff;
-  color: #4b0082;
+  color: #8b0000;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
 
-.crud-peliculas-button:hover {
-  background-color: #6a5acd;
+.crud-rentas-button:hover {
+  background-color: #b22222;
   color: #ffffff;
 }
